--- a/src/components/ToDo.css
+++ b/src/components/ToDo.css
@@ -1,11 +1,16 @@
 .todos__single {
     display: flex;
-    width: 29.5%;
+    /* width: 29.5%; */
     border-radius: 5px;
     padding: 20px;
     margin-top: 15px;
     background-image: url("https://img.freepik.com/free-photo/crumpled-yellow-paper-background-close-up_60487-2390.jpg?size=626&ext=jpg");
+    transition: 0.2s all;
 
+}
+.todos__single:hover{
+    box-shadow: 0 0 5px black;
+    transform: scale(1.03);
 }
 .todos__single__text{
     flex:1;
@@ -21,7 +26,16 @@
     font-size: 25px;
     cursor:pointer;
 }
-
+.todos__single__text_edit{
+    flex:1;
+    padding:5px;
+    border:none;
+    font-size: 20px;
+    border-radius: 10px;
+}
+.todos__single__text_edit{
+    outline:none;
+}
 @media(max-width:700px){
     .input{
         width:95%;
@@ -29,13 +43,16 @@
     .todos{
         width:95%;
     }
-    .todos__single{
+    /* .todos__single{
         width:90%;
+    } */
+    .todos__single__text_edit{
+        width:95%;
     }
 }
 
 @media(max-width:1200px){
-    .todos__single{
+    /* .todos__single{
         width:40%;
-    }
+    } */
 }
